# net_comms

./: Cargo.toml  hello_there.txt  received_message.ron  todo.txt
.VSCodeCounter/2021-08-14_18-01-07/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-08-17_23-12-00/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-08-21_11-44-47/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-09-03_15-15-13/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-09-19_16-09-51/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-09-21_22-56-06/: details.md  results.csv  results.md  results.txt
client_logs/server_replies/2021-09-03-11-31-38/: message.ron
client_logs/user_to_user/2021-09-03-11-31-50/: message.ron
client_logs/user_to_user/2021-09-03-11-32-09/: message.ron
lib/: Cargo.toml  Codes.txt  structure.txt  text_message.txt
lib/src/: lib.rs  metadata_test.json  settings.rs
lib/src/components/: buffer.rs  command.rs  message.rs  packet.rs  request.rs  user.rs
other/2021-09-02-16-58-57/: message.ron
other/2021-09-02-17-01-32/: message.ron
other/2021-09-02-17-02-36/: message.ron
other/2021-09-02-17-03-34/: message.ron
other/2021-09-02-17-05-25/: message.ron
other/2021-09-03-07-45-14/: message.ron
other/2021-09-03-07-48-08/: message.ron
other/2021-09-03-07-51-38/: message.ron
other/2021-09-03-07-53-53/: message.ron
other/2021-09-03-07-55-01/: message.ron
other/2021-09-03-07-59-14/: message.ron
other/2021-09-03-08-01-56/: message.ron
server_logs/requests/2021-09-01-19-14-27/: message.ron
server_logs/requests/2021-09-01-19-14-46/: message.ron
server_logs/requests/2021-09-02-16-32-40/: message.ron
server_logs/requests/2021-09-02-16-37-37/: message.ron
server_logs/requests/2021-09-02-16-38-37/: message.ron
server_logs/requests/2021-09-02-16-39-50/: message.ron
server_logs/requests/2021-09-02-16-42-22/: message.ron
server_logs/requests/2021-09-03-08-03-26/: message.ron
server_logs/requests/2021-09-03-08-09-33/: message.ron
server_logs/requests/2021-09-03-08-12-41/: message.ron
server_logs/requests/2021-09-03-08-15-19/: message.ron
server_logs/requests/2021-09-03-11-31-38/: message.ron
src/shared/: config.rs  lib.rs  request.rs
src/shared/message/: content.rs  message_kind.rs  (+4 more)
(+137 files in other folders)
