[package]
name = "net_comms"
version = "0.2.0"
authors = ["stepa <pamallinos@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
library = {path = "library"}


utils = {git = "https://github.com/WellHereIAm/utils.git", branch = "main"}

# Those are here only for debugging purposes.
serde = { version = "1.0", features = ["derive"] }
ron = "*"
indoc = "1.0.3"