[package]
name = "net_comms"
version = "0.2.0"
authors = ["stepa <pamallinos@email.cz>"]
edition = "2018"

[lib]
name = "shared"
path = "src\\shared\\lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
library = {path = "library"}

utils = {git = "https://github.com/WellHereIAm/utils.git", branch = "main"}

chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
ron = "*"
indoc = "1.0.3"

pbkdf2 = "0.9"
rand_core = { version = "0.6", features = ["std"] }

rand = "0.8.4"