[package]
name = "net_comms"
version = "0.2.0"
authors = ["stepa <pamallinos@email.cz>"]
edition = "2018"

[lib]
name = "shared"
path = "src\\shared\\lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
nardol = "0.0.1"

utils = {git = "https://github.com/WellHereIAm/utils.git", branch = "main"}

chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
ron = "*"
indoc = "1.0.3"

pbkdf2 = "0.9"
rand_core = { version = "0.6", features = ["std"] }

rand = "0.8.4"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]
# This is just example of rust module system with all I managed to gather, yet since I am just a beginner I do not provide any guaranties about its corectness.