[package]
name = "lib"
version = "0.1.0"
authors = ["stepa <pamallinos@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
ron = "*"
utils = {git = "https://github.com/WellHereIAm/utils.git", branch = "main"}
